chore: Upgrade @material to v5.1.0

--- a/src/Leonardo.AspNetCore.Components.Material/Checkbox/MDCCheckbox.razor.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/Checkbox/MDCCheckbox.razor.scss
@@ -1,2 +1,2 @@
-@import "@material/form-field/mdc-form-field";
-@import "@material/checkbox/mdc-checkbox";
+@use "@material/form-field/mdc-form-field";
+@use "@material/checkbox/mdc-checkbox";
