--- a/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor.scss
@@ -1,4 +1,4 @@
-@import "@material/list/mdc-list";
-@import "@material/menu-surface/mdc-menu-surface";
-@import "@material/menu/mdc-menu";
-@import "@material/select/mdc-select";
+@use "@material/list/mdc-list";
+@use "@material/menu-surface/mdc-menu-surface";
+@use "@material/menu/mdc-menu";
+@use "@material/select/mdc-select";
