--- a/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawer.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawer.razor
@@ -1,5 +1,9 @@
 @inherits MaterialComponent
 <aside @ref="_MDCDrawer"
        class="@ClassString">
-    @ChildContent
+    <div class="mdc-drawer__content">
+        <nav class="mdc-list">
+            @ChildContent
+        </nav>
+    </div>
 </aside>
