--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -22,6 +22,9 @@
             <NavLink class="nav-link" href="component/checkbox">Checkbox</NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="component/drawer">Drawer</NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="component/select">Select</NavLink>
         </li>
         <li class="nav-item px-3">
