--- a/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawer.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawer.razor
@@ -3,7 +3,7 @@
        class="@ClassString">
     <div class="mdc-drawer__content">
         <CascadingValue Value=this>
-            <nav class="mdc-list">
+            <nav class="mdc-list" @ref="_MDCList">
                 @ChildContent
             </nav>
         </CascadingValue>
