--- a/examples/Blazor.Material.Components.WebApp/app.scss
+++ b/examples/Blazor.Material.Components.WebApp/app.scss
@@ -3,9 +3,34 @@
 @import '../../submodules/material-components-web-catalog/src/styles/CatalogPage.scss';
 @import '../../submodules/material-components-web-catalog/src/styles/ComponentCatalogPanel.scss';
 @import '../../submodules/material-components-web-catalog/src/styles/ComponentPage.scss';
+@import '../../submodules/material-components-web-catalog/src/styles/DrawerFrameCatalog.scss';
 @import '../../submodules/material-components-web-catalog/src/styles/HeroComponent.scss';
 @import '../../submodules/material-components-web-catalog/src/styles/TopAppBarCatalog.scss';
 
-.demo-frame {
-  display: flex;
+body {
+  margin: 0;
+}
+
+.drawer-frame-app-content {
+  position: relative;
+  width: 100%;
+}
+
+#blazor-error-ui {
+  background: lightyellow;
+  bottom: 0;
+  box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+  display: none;
+  left: 0;
+  padding: 0.6rem 1.25rem 0.7rem 1.25rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+
+#blazor-error-ui .dismiss {
+  cursor: pointer;
+  position: absolute;
+  right: 0.75rem;
+  top: 0.5rem;
 }
