--- a/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawer.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawer.razor
@@ -19,7 +19,7 @@
     <div class="mdc-drawer__content">
         <CascadingValue Value=this>
             <nav class="mdc-list" @ref="_MDCList">
-                @ChildContent
+                @DrawerContent
             </nav>
         </CascadingValue>
     </div>
