--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -1,11 +1,9 @@
-﻿<MDCDrawer>
-    <MDCDrawerNavLink Text="Home" Href="" Match="NavLinkMatch.All" />
-    <MDCDrawerNavLink Text="Counter" Href="counter" />
-    <MDCDrawerNavLink Text="Fetch data" Href="fetchdata" />
-    <MDCDrawerNavLink Text="Button" Href="component/button" />
-    <MDCDrawerNavLink Text="Checkbox" Href="component/checkbox" />
-    <MDCDrawerNavLink Text="Drawer" Href="component/drawer" Match="NavLinkMatch.Prefix" />
-    <MDCDrawerNavLink Text="Select" Href="component/select" />
-    <MDCDrawerNavLink Text="Text Field" Href="component/text-field" />
-    <MDCDrawerNavLink Text="Top App Bar" Href="component/top-app-bar" />
-</MDCDrawer>
+﻿<MDCDrawerNavLink Text="Home" Href="" Match="NavLinkMatch.All" />
+<MDCDrawerNavLink Text="Counter" Href="counter" />
+<MDCDrawerNavLink Text="Fetch data" Href="fetchdata" />
+<MDCDrawerNavLink Text="Button" Href="component/button" />
+<MDCDrawerNavLink Text="Checkbox" Href="component/checkbox" />
+<MDCDrawerNavLink Text="Drawer" Href="component/drawer" Match="NavLinkMatch.Prefix" />
+<MDCDrawerNavLink Text="Select" Href="component/select" />
+<MDCDrawerNavLink Text="Text Field" Href="component/text-field" />
+<MDCDrawerNavLink Text="Top App Bar" Href="component/top-app-bar" />
