feat(data-table): Initial scaffolding

--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -3,6 +3,7 @@
 <MDCDrawerNavLink Text="Fetch data" Href="fetchdata" />
 <MDCDrawerNavLink Text="Button" Href="component/button" />
 <MDCDrawerNavLink Text="Checkbox" Href="component/checkbox" />
+<MDCDrawerNavLink Text="Data Table" Href="component/data-table" />
 <MDCDrawerNavLink Text="Drawer" Href="component/drawer" Match="NavLinkMatch.Prefix" />
 <MDCDrawerNavLink Text="Select" Href="component/select" />
 <MDCDrawerNavLink Text="Text Field" Href="component/text-field" />
