--- a/examples/Blazor.Material.Components.WebApp/_Imports.razor
+++ b/examples/Blazor.Material.Components.WebApp/_Imports.razor
@@ -7,6 +7,7 @@
 @using Blazor.Material.Components.WebApp.Shared
 @using Leonardo.AspNetCore.Components.Material.Button
 @using Leonardo.AspNetCore.Components.Material.Checkbox
+@using Leonardo.AspNetCore.Components.Material.DataTable
 @using Leonardo.AspNetCore.Components.Material.Drawer
 @using Leonardo.AspNetCore.Components.Material.Select
 @using Leonardo.AspNetCore.Components.Material.TextField
