--- a/src/Leonardo.AspNetCore.Components.Material/DataTable/MDCDataTable.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/DataTable/MDCDataTable.razor
@@ -1,3 +1,10 @@
-@inherits MaterialComponent
+@inherits MDCDataTable
+@typeparam TItem
 <div class="@ClassString">
+    <table class="mdc-data-table__table" aria-label="@Label">
+        <thead>
+        </thead>
+        <tbody class="mdc-data-table__content">
+        </tbody>
+    </table>
 </div>
