feat(data-table): Allow to specify a custom template for the row's item

--- a/examples/Blazor.Material.Components.WebApp/Pages/DataTableCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/DataTableCatalog.razor
@@ -1,12 +1,12 @@
 ﻿@page "/component/data-table"
 <ComponentCatalogPanel Title="Data Table">
     <HeroComponent>
-        <MDCDataTable Label="Dessert calories" DataSource="@dessertCalories">
-            <MDCDataTableColumn Header="Dessert" DataMember="@nameof(DessertCalories.Dessert)" />
-            <MDCDataTableColumn Header="Calories" DataMember="@nameof(DessertCalories.Calories)" />
-            <MDCDataTableColumn Header="Fat" DataMember="@nameof(DessertCalories.Fat)" />
-            <MDCDataTableColumn Header="Carbs" DataMember="@nameof(DessertCalories.Carbs)" />
-            <MDCDataTableColumn Header="Protein (g)" DataMember="@nameof(DessertCalories.Protein)" />
+        <MDCDataTable Label="Dessert calories" DataSource="@dessertCalories" TItem="DessertCalories">
+            <MDCDataTableColumn Header="Dessert" DataMember="@nameof(DessertCalories.Dessert)" TItem="DessertCalories" />
+            <MDCDataTableColumn Header="Calories" DataMember="@nameof(DessertCalories.Calories)" TItem="DessertCalories" />
+            <MDCDataTableColumn Header="Fat" DataMember="@nameof(DessertCalories.Fat)" TItem="DessertCalories" />
+            <MDCDataTableColumn Header="Carbs" DataMember="@nameof(DessertCalories.Carbs)" TItem="DessertCalories" />
+            <MDCDataTableColumn Header="Protein (g)" DataMember="@nameof(DessertCalories.Protein)" TItem="DessertCalories" />
         </MDCDataTable>
     </HeroComponent>
 </ComponentCatalogPanel>
