--- a/src/Leonardo.AspNetCore.Components.Material/DataTable/MDCDataTable.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/DataTable/MDCDataTable.razor
@@ -1,30 +1,35 @@
 @inherits MDCDataTable
 @typeparam TItem
-
-<CascadingValue Value=this>
-    @ChildContent
-</CascadingValue>
-
 <div class="@ClassString">
     <table class="mdc-data-table__table" aria-label="@Label">
-        <thead>
-            <tr class="mdc-data-table__header-row">
-                @foreach (var column in Columns)
-                {
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">@column.Header</th>
-                }
-            </tr>
-        </thead>
-        <tbody class="mdc-data-table__content">
-            @foreach (var item in DataSource)
-            {
-                <tr class="mdc-data-table__row">
+        <CascadingValue Value=this>
+            @ChildContent
+            <thead>
+                <tr class="mdc-data-table__header-row">
                     @foreach (var column in Columns)
                     {
-                        <td class="mdc-data-table__cell">@GetItemDisplayText(item, column.DataMember)</td>
+                        <th class="mdc-data-table__header-cell" role="columnheader" scope="col">@column.Header</th>
                     }
                 </tr>
-            }
-        </tbody>
+            </thead>
+            <tbody class="mdc-data-table__content">
+                @foreach (var item in DataSource)
+                {
+                    <tr class="mdc-data-table__row">
+                        @foreach (var column in Columns)
+                        {
+                            @if (column.DataTemplate != null)
+                            {
+                                <td class="mdc-data-table__cell">@column.DataTemplate(item)</td>
+                            }
+                            else
+                            {
+                                <td class="mdc-data-table__cell">@GetItemDisplayText(item, column.DataMember)</td>
+                            }
+                        }
+                    </tr>
+                }
+            </tbody>
+        </CascadingValue>
     </table>
 </div>
