--- a/examples/Blazor.Material.Components.WebApp/_Imports.razor
+++ b/examples/Blazor.Material.Components.WebApp/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.JSInterop
 @using Blazor.Material.Components.WebApp
 @using Blazor.Material.Components.WebApp.Shared
+@using Leonardo.AspNetCore.Components.Material
 @using Leonardo.AspNetCore.Components.Material.Button
 @using Leonardo.AspNetCore.Components.Material.Checkbox
 @using Leonardo.AspNetCore.Components.Material.DataTable
