feat(snackbar): Initial scaffolding

--- a/examples/Blazor.Material.Components.WebApp/_Imports.razor
+++ b/examples/Blazor.Material.Components.WebApp/_Imports.razor
@@ -11,5 +11,6 @@
 @using Leonardo.AspNetCore.Components.Material.DataTable
 @using Leonardo.AspNetCore.Components.Material.Drawer
 @using Leonardo.AspNetCore.Components.Material.Select
+@using Leonardo.AspNetCore.Components.Material.Snackbar
 @using Leonardo.AspNetCore.Components.Material.TextField
 @using Leonardo.AspNetCore.Components.Material.TopAppBar
