--- a/src/Leonardo.AspNetCore.Components.Material/app.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/app.scss
@@ -3,6 +3,7 @@
 @use './DataTable/MDCDataTable.razor.scss';
 @use './Drawer/MDCDrawer.razor.scss';
 @use './Select/MDCSelect.razor.scss';
+@use './Snackbar/MDCSnackbar.razor.scss';
 @use './TextField/MDCTextField.razor.scss';
 @use './TopAppBar/MDCTopAppBar.razor.scss';
 
