refactor: Use attribute splatting for custom 'class' attribute

--- a/examples/Blazor.Material.Components.WebApp/Shared/ComponentCatalogPanel.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/ComponentCatalogPanel.razor
@@ -13,14 +13,17 @@
                     </div>
                 </div>
             </div>
-            <div class="hero-options component-catalog-panel__header-elements component-catalog-panel__header__hero-options">
-                <ul class="mdc-list mdc-list--non-interactive">
-                    <li class="mdc-list-item">
-                        <span class="mdc-typography--overline">Options</span>
-                    </li>
-                    @HeroComponentOptions
-                </ul>
-            </div>
+            @if (HeroComponentOptions != null)
+            {
+                <div class="hero-options component-catalog-panel__header-elements component-catalog-panel__header__hero-options">
+                    <ul class="mdc-list mdc-list--non-interactive">
+                        <li class="mdc-list-item">
+                            <span class="mdc-typography--overline">Options</span>
+                        </li>
+                        @HeroComponentOptions
+                    </ul>
+                </div>
+            }
         </div>
     </div>
     @if (Demos != null)
