--- a/examples/Blazor.Material.Components.WebApp/app.scss
+++ b/examples/Blazor.Material.Components.WebApp/app.scss
@@ -5,6 +5,7 @@
 @import '../../submodules/material-components-web-catalog/src/styles/ComponentPage.scss';
 @import '../../submodules/material-components-web-catalog/src/styles/DrawerFrameCatalog.scss';
 @import '../../submodules/material-components-web-catalog/src/styles/HeroComponent.scss';
+@import '../../submodules/material-components-web-catalog/src/styles/SnackbarCatalog.scss';
 @import '../../submodules/material-components-web-catalog/src/styles/TopAppBarCatalog.scss';
 
 app {
