--- a/src/Leonardo.AspNetCore.Components.Material/Snackbar/MDCSnackbar.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Snackbar/MDCSnackbar.razor
@@ -1,5 +1,5 @@
 @inherits MaterialComponent
-<div class="@ClassString">
+<div class="@ClassString" @ref="_MDCSnackbar" id="@Id">
     <div class="mdc-snackbar__surface">
         <div class="mdc-snackbar__label"
              role="status"
