--- a/examples/Blazor.Material.Components.WebApp/_Imports.razor
+++ b/examples/Blazor.Material.Components.WebApp/_Imports.razor
@@ -13,5 +13,6 @@
 @using Leonardo.AspNetCore.Components.Material.Drawer
 @using Leonardo.AspNetCore.Components.Material.Select
 @using Leonardo.AspNetCore.Components.Material.Snackbar
+@using Leonardo.AspNetCore.Components.Material.TabBar
 @using Leonardo.AspNetCore.Components.Material.TextField
 @using Leonardo.AspNetCore.Components.Material.TopAppBar
