--- a/src/Leonardo.AspNetCore.Components.Material/app.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/app.scss
@@ -4,6 +4,7 @@
 @use './Drawer/MDCDrawer.razor.scss';
 @use './Select/MDCSelect.razor.scss';
 @use './Snackbar/MDCSnackbar.razor.scss';
+@use './TabBar/MDCTabBar.razor.scss';
 @use './TextField/MDCTextField.razor.scss';
 @use './TopAppBar/MDCTopAppBar.razor.scss';
 
