feat(tab-bar): Add tab scroller to the HTML structure

--- a/src/Leonardo.AspNetCore.Components.Material/TabBar/MDCTabBar.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/TabBar/MDCTabBar.razor
@@ -1,3 +1,9 @@
 @inherits MaterialComponent
-<div class="@ClassString">
+<div class="@ClassString" role="tablist">
+    <div class="mdc-tab-scroller">
+        <div class="mdc-tab-scroller__scroll-area">
+            <div class="mdc-tab-scroller__scroll-content">
+            </div>
+        </div>
+    </div>
 </div>
