--- a/examples/Blazor.Material.Components.WebApp/Pages/TabBarCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/TabBarCatalog.razor
@@ -2,7 +2,9 @@
 <ComponentCatalogPanel Title="Tab Bar">
     <HeroComponent>
         <MDCTabBar>
-
+            <MDCTab Label="Home" />
+            <MDCTab Label="Merchandise" />
+            <MDCTab Label="About us" />
         </MDCTabBar>
     </HeroComponent>
 </ComponentCatalogPanel>
