--- a/test/Leonardo.AspNetCore.Components.Material.Testing/_Imports.razor
+++ b/test/Leonardo.AspNetCore.Components.Material.Testing/_Imports.razor
@@ -1,2 +1,3 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Leonardo.AspNetCore.Components.Material.DataTable
+@using Leonardo.AspNetCore.Components.Material.TabBar
