--- a/examples/Blazor.Material.Components.WebApp/Pages/FetchData.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/FetchData.razor
@@ -1,4 +1,4 @@
-﻿@page "/fetchdata"
+@page "/fetchdata"
 @inject HttpClient Http
 
 <h1>Weather forecast</h1>
@@ -7,7 +7,7 @@
 
 @if (forecasts == null)
 {
-<p><em>Loading...</em></p>
+    <p><em>Loading...</em></p>
 }
 else
 {
@@ -28,7 +28,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
     }
 
     public class WeatherForecast
