--- a/src/Leonardo.AspNetCore.Components.Material/TabBar/MDCTabBar.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/TabBar/MDCTabBar.razor
@@ -1,5 +1,5 @@
 @inherits MaterialComponent
-<div class="@ClassString" role="tablist">
+<div class="@ClassString" role="tablist" @ref="_MDCTabBar" id="@Id">
     <div class="mdc-tab-scroller">
         <div class="mdc-tab-scroller__scroll-area">
             <div class="mdc-tab-scroller__scroll-content">
